--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -64,5 +64,12 @@
     <welcome-file-list>
         <welcome-file>/permisostrabajo/mis_permisos.xhtml</welcome-file>
     </welcome-file-list>
+    
+    <error-page>
+        <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+        <location>/general/session_terminada.xhtml</location>
+    </error-page>
+    
+    
 </web-app>
 
